--- a/plugins/README
+++ b/plugins/README
@@ -2,3 +2,4 @@ In this folder are contained
 
 * the static compiled plugins
 * the goodies needed to compile extern (dynamic load) plugins
+* skel dir is automatically excluded
